# web_shop

./: .coverage  .coveragerc  .dockerignore  .env  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: context_processors.py  settings.py  urls.py  views.py
app/templates/: base.html  home.html
app/templates/components/: _footer.html  _header.html  _navbar.html  _sidebar.html
app/tests/: test_home_view.py  test_login_view.py  test_product_data.py
brands/: admin.py  forms.py  models.py  urls.py  views.py
brands/migrations/: 0001_initial.py  0002_alter_brand_updated_at.py
brands/templates/: brand_create.html  brand_delete.html  brand_detail.html  brand_list.html  brand_update.html
brands/tests/: test_forms.py  test_models.py  test_views.py
cart/: cart.py  urls.py  views.py
cart/templates/: cart_list.html
cart/tests/: test_cart.py  test_views.py
categories/: admin.py  forms.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_updated_at.py
categories/templates/: category_create.html  category_delete.html  category_detail.html  category_list.html  category_update.html
categories/tests/: test_forms.py  test_models.py  test_views.py
orders/: forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_payment_method.py
orders/templates/: finalize_order.html
orders/tests/: test_forms.py  test_models.py  test_views.py
products/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_photo.py  0003_alter_product_photo.py  0004_alter_product_photo.py  0005_alter_product_photo.py  0006_product_external_id.py  0007_product_is_public.py  0008_remove_product_is_public.py  0009_alter_product_photo.py  0010_product_discount_price.py
products/templates/: product_create.html  product_delete.html  product_detail.html  product_list.html  product_update.html
products/tests/: test_models.py  test_urls.py  test_utils.py  test_views.py
static/css/: style.css
staticfiles/css/: style.css
(+1 files in other folders)
