[tool.poetry]
name = "web_shop"
version = "0.1.0"
description = "Projeto Django de e-commerce"
authors = ["Kaio Herculano <seu-email@exemplo.com>"]
readme = "README.md"
packages = [{ include = "app" }] # ajuste para o nome da sua pasta principal Django

[tool.poetry.dependencies]
python = "^3.12"
django = "5.2.1"  # ou a versão que você estiver usando
psycopg2-binary = "^2.9"
python-decouple = "^3.8"
gunicorn = "^23.0.0"
whitenoise = "6.9.0"
requests = "2.32.4"
annotated-types = "0.7.0"
anyio = "4.10.0"
asgiref = "3.8.1"
authlib = "1.6.3"
certifi = "2025.4.26"
cffi = "2.0.0"
cfgv = "3.4.0"
charset-normalizer = "3.4.2"
click = "8.2.1"
colorama = "0.4.6"
coverage = "7.10.6"
cryptography = "45.0.7"
distlib = "0.4.0"
dparse = "0.6.4"
filelock = "3.19.1"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
identify = "2.6.14"
idna = "3.10"
isort = "6.0.1"
jinja2 = "3.1.6"
joblib = "1.5.2"
markdown-it-py = "4.0.0"
markupsafe = "3.0.2"
marshmallow = "4.0.1"
mdurl = "0.1.2"
mypy-extensions = "1.1.0"
nltk = "3.9.1"
nodeenv = "1.9.1"
packaging = "25.0"
pathspec = "0.12.1"
pillow = "11.2.1"
platformdirs = "4.4.0"
pre-commit = "4.3.0"
psutil = "7.0.0"
pycparser = "2.23"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pygments = "2.19.2"
pyyaml = "6.0.2"
regex = "2025.9.1"
rich = "14.1.0"
ruamel-yaml = "0.18.15"
ruamel-yaml-clib = "0.2.12"
safety = "3.6.1"
safety-schemas = "0.0.14"
setuptools = "80.9.0"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlparse = "0.5.3"
tenacity = "9.1.2"
tomlkit = "0.13.3"
tqdm = "4.67.1"
typer = "0.17.4"
typing-extensions = "4.15.0"
tzdata = "2025.2"
urllib3 = "2.4.0"
virtualenv = "20.34.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.6"

# --- Configuração do Black (Formatador) ---
[tool.black]
line-length = 99
extend-exclude = '''
/(migrations)/
'''

# --- Configuração do Ruff (Linter) ---
[tool.ruff]
line-length = 99
select = ["E", "W", "F", "I"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.lint.isort]
known_django = ["django"]
known_first_party = ["app", "brands", "cart", "categories", "orders", "products"]
